# DA-Vault

./: README.md
Project1/: Doxyfile
Project1/html/: App_8cpp.html  App_8cpp__incl.map  App_8cpp__incl.md5  App_8h.html  (+83 more)
Project2/: .gitignore  CMakeLists.txt  Doxyfile
Project2/html/: App_8cpp.html  App_8cpp__incl.map  App_8cpp__incl.md5  App_8h.html  App_8h__dep__incl.map  App_8h__dep__incl.md5  App_8h__incl.map  App_8h__incl.md5  App_8h_source.html  BackTracking_8cpp.html  BackTracking_8cpp__incl.map  BackTracking_8cpp__incl.md5  BackTracking_8h.html  BackTracking_8h__dep__incl.map  BackTracking_8h__dep__incl.md5  BackTracking_8h__incl.map  BackTracking_8h__incl.md5  BackTracking_8h_source.html  Graph_8cpp.html  Graph_8cpp__incl.map  Graph_8cpp__incl.md5  Graph_8h.html  Graph_8h__dep__incl.map  Graph_8h__dep__incl.md5  Graph_8h__incl.map  Graph_8h__incl.md5  Graph_8h_source.html  MutablePriorityQueue_8h.html  MutablePriorityQueue_8h__dep__incl.map  MutablePriorityQueue_8h__dep__incl.md5  MutablePriorityQueue_8h_source.html  OtherHeuristics_8cpp.html  OtherHeuristics_8cpp__incl.map  OtherHeuristics_8cpp__incl.md5  OtherHeuristics_8h.html  OtherHeuristics_8h__dep__incl.map  OtherHeuristics_8h__dep__incl.md5  OtherHeuristics_8h__incl.map  OtherHeuristics_8h__incl.md5  OtherHeuristics_8h_source.html  (+56 more)
Project2/src/: App.cpp  App.h  BackTracking.cpp  BackTracking.h  Graph.cpp  Graph.h  MutablePriorityQueue.h  OtherHeuristics.cpp  OtherHeuristics.h  ParsingFunctions.cpp  ParsingFunctions.h  RealWorld.cpp  RealWorld.h  TriangularApproximation.cpp  TriangularApproximation.h
(+81 files in other folders)
